--- a/settings.json
+++ b/settings.json
@@ -1,243 +1,244 @@
 {
-    "breadcrumbs.enabled": true,
-    "cSpell.enabledLanguageIds": [
-      "asciidoc",
-      "c",
-      "cpp",
-      "csharp",
-      "css",
-      "go",
-      "handlebars",
-      "html",
-      "jade",
-      "javascript",
-      "javascriptreact",
-      "json",
-      "latex",
-      "less",
-      "markdown",
-      "php",
-      "plaintext",
-      "pub",
-      "python",
-      "restructuredtext",
-      "rust",
-      "scss",
-      "text",
-      "typescript",
-      "typescriptreact",
-      "yml"
-    ],
-    "cSpell.userWords": [
-      "GAMETYPE",
-      "Inlines",
-      "Popconfirm",
-      "REGTWO",
-      "Serializers",
-      "Sider",
-      "Todos",
-      "Truthy",
-      "abortable",
-      "alicdn",
-      "alipay",
-      "antd",
-      "antv",
-      "appstore",
-      "bestzip",
-      "bizcharts",
-      "browserslist",
-      "camelcase",
-      "chromedriver",
-      "compat",
-      "contenthash",
-      "debounced",
-      "devtool",
-      "devtools",
-      "ensp",
-      "flexbox",
-      "flexbugs",
-      "flowtype",
-      "fullcalendar",
-      "gantt",
-      "gmail",
-      "hoverable",
-      "immer",
-      "laravel",
-      "mockjs",
-      "nightwatch",
-      "noopener",
-      "noreferrer",
-      "pathinfo",
-      "persistor",
-      "plusplus",
-      "polyfill",
-      "polyfills",
-      "precache",
-      "presite",
-      "regexes",
-      "reselect",
-      "runtimes",
-      "serializer",
-      "sourcemap",
-      "stylelint",
-      "svgr",
-      "testname",
-      "typeahead",
-      "ueditor",
-      "unmount",
-      "viser",
-      "vuedraggable",
-      "vuetify",
-      "vuex",
-      "webpacks",
-      "wildings"
-    ],
-    "editor.fontFamily": "Fira Code",
-    "editor.fontLigatures": true,
-    "editor.quickSuggestions": {
-      "comments": true,
-      "other": true,
-      "strings": true
+  "breadcrumbs.enabled": true,
+  "cSpell.enabledLanguageIds": [
+    "asciidoc",
+    "c",
+    "cpp",
+    "csharp",
+    "css",
+    "go",
+    "handlebars",
+    "html",
+    "jade",
+    "javascript",
+    "javascriptreact",
+    "json",
+    "latex",
+    "less",
+    "markdown",
+    "php",
+    "plaintext",
+    "pub",
+    "python",
+    "restructuredtext",
+    "rust",
+    "scss",
+    "text",
+    "typescript",
+    "typescriptreact",
+    "yml"
+  ],
+  "cSpell.userWords": [
+    "GAMETYPE",
+    "Inlines",
+    "Popconfirm",
+    "REGTWO",
+    "Serializers",
+    "Sider",
+    "Todos",
+    "Truthy",
+    "abortable",
+    "alicdn",
+    "alipay",
+    "antd",
+    "antv",
+    "appstore",
+    "bestzip",
+    "bizcharts",
+    "browserslist",
+    "camelcase",
+    "chromedriver",
+    "compat",
+    "contenthash",
+    "debounced",
+    "devtool",
+    "devtools",
+    "ensp",
+    "flexbox",
+    "flexbugs",
+    "flowtype",
+    "fullcalendar",
+    "gantt",
+    "gmail",
+    "hoverable",
+    "immer",
+    "laravel",
+    "linebreak",
+    "mockjs",
+    "nightwatch",
+    "noopener",
+    "noreferrer",
+    "pathinfo",
+    "persistor",
+    "plusplus",
+    "polyfill",
+    "polyfills",
+    "precache",
+    "presite",
+    "regexes",
+    "reselect",
+    "runtimes",
+    "serializer",
+    "sourcemap",
+    "stylelint",
+    "svgr",
+    "testname",
+    "typeahead",
+    "ueditor",
+    "unmount",
+    "viser",
+    "vuedraggable",
+    "vuetify",
+    "vuex",
+    "webpacks",
+    "wildings"
+  ],
+  "editor.fontFamily": "Fira Code",
+  "editor.fontLigatures": true,
+  "editor.quickSuggestions": {
+    "comments": true,
+    "other": true,
+    "strings": true
+  },
+  "emmet.triggerExpansionOnTab": true,
+  "eslint.validate": [
+    "javascript",
+    "javascriptreact",
+    {
+      "autoFix": true,
+      "language": "html"
     },
-    "emmet.triggerExpansionOnTab": true,
-    "eslint.validate": [
-      "javascript",
-      "javascriptreact",
-      {
-        "autoFix": true,
-        "language": "html"
-      },
-      {
-        "autoFix": true,
-        "language": "react"
-      }
-    ],
-    "explorer.confirmDelete": false,
-    "files.trimTrailingWhitespace": true,
-    "git.ignoreMissingGitWarning": true,
-    "javascript.implicitProjectConfig.experimentalDecorators": true,
-    "javascript.updateImportsOnFileMove.enabled": "always",
-    "printcode.autoPrint": false,
-    "terminal.explorerKind": "external",
-    "terminal.external.osxExec": "iTerm.app",
-    "terminal.integrated.fontFamily": "Source Code Pro for Powerline",
-    "terminal.integrated.fontSize": 14,
-    "terminal.integrated.rendererType": "dom",
-    "terminal.integrated.shell.osx": "/bin/zsh",
-    "typescript.format.insertSpaceBeforeFunctionParenthesis": false,
-    "window.zoomLevel": 0,
-    "workbench.colorTheme": "Solarized Dark",
-    "workbench.iconTheme": "material-icon-theme",
-    "peacock.favoriteColors": [
-      {
-        "name": "Angular Red",
-        "value": "#b52e31"
-      },
-      {
-        "name": "Auth0 Orange",
-        "value": "#eb5424"
-      },
-      {
-        "name": "Azure Blue",
-        "value": "#007fff"
-      },
-      {
-        "name": "C# Purple",
-        "value": "#68217A"
-      },
-      {
-        "name": "Gatsby Purple",
-        "value": "#639"
-      },
-      {
-        "name": "Go Cyan",
-        "value": "#5dc9e2"
-      },
-      {
-        "name": "Java Blue-Gray",
-        "value": "#557c9b"
-      },
-      {
-        "name": "JavaScript Yellow",
-        "value": "#f9e64f"
-      },
-      {
-        "name": "Mandalorian Blue",
-        "value": "#1857a4"
-      },
-      {
-        "name": "Node Green",
-        "value": "#215732"
-      },
-      {
-        "name": "React Blue",
-        "value": "#00b3e6"
-      },
-      {
-        "name": "Something Different",
-        "value": "#832561"
-      },
-      {
-        "name": "Vue Green",
-        "value": "#42b883"
-      }
-    ],
-    "css.lint.boxModel": "warning",
-    "css.lint.compatibleVendorPrefixes": "warning",
-    "css.lint.duplicateProperties": "warning",
-    "css.lint.float": "warning",
-    "css.lint.idSelector": "warning",
-    "css.lint.important": "warning",
-    "css.lint.importStatement": "warning",
-    "css.lint.universalSelector": "warning",
-    "css.lint.unknownVendorSpecificProperties": "warning",
-    "css.lint.zeroUnits": "warning",
-    "scss.lint.boxModel": "warning",
-    "scss.lint.compatibleVendorPrefixes": "warning",
-    "scss.lint.duplicateProperties": "warning",
-    "scss.lint.float": "warning",
-    "scss.lint.idSelector": "warning",
-    "scss.lint.ieHack": "warning",
-    "scss.lint.important": "warning",
-    "scss.lint.importStatement": "warning",
-    "scss.lint.universalSelector": "warning",
-    "scss.lint.unknownVendorSpecificProperties": "warning",
-    "scss.lint.zeroUnits": "warning",
-    "less.lint.compatibleVendorPrefixes": "warning",
-    "less.lint.importStatement": "warning",
-    "cSpell.showCommandsInEditorContextMenu": false,
-    "cSpell.showStatus": false,
-    "editor.fontSize": 14,
-    "prettier.singleQuote": true,
-    "workbench.activityBar.visible": true,
-    "[javascriptreact]": {
-      "editor.defaultFormatter": "esbenp.prettier-vscode"
-    },
-    "[sass]": {
-      "editor.defaultFormatter": "syler.sass-indented"
-    },
-    "[scss]": {
-      "editor.defaultFormatter": "esbenp.prettier-vscode"
-    },
-    "[typescriptreact]": {
-      "editor.defaultFormatter": "esbenp.prettier-vscode"
-    },
-    "typescript.updateImportsOnFileMove.enabled": "always",
-    "[json]": {
-      "editor.defaultFormatter": "esbenp.prettier-vscode"
-    },
-    "[jsonc]": {
-      "editor.defaultFormatter": "esbenp.prettier-vscode"
-    },
-    "html.format.wrapLineLength": 0,
-    "printcode.lineNumbers": "off",
-    "[typescript]": {
-      "editor.defaultFormatter": "vscode.typescript-language-features"
-    },
-    "[css]": {
-      "editor.defaultFormatter": "esbenp.prettier-vscode"
-    },
-    "[html]": {
-      "editor.defaultFormatter": "esbenp.prettier-vscode"
+    {
+      "autoFix": true,
+      "language": "react"
     }
+  ],
+  "explorer.confirmDelete": false,
+  "files.trimTrailingWhitespace": true,
+  "git.ignoreMissingGitWarning": true,
+  "javascript.implicitProjectConfig.experimentalDecorators": true,
+  "javascript.updateImportsOnFileMove.enabled": "always",
+  "printcode.autoPrint": false,
+  "terminal.explorerKind": "external",
+  "terminal.external.osxExec": "iTerm.app",
+  "terminal.integrated.fontFamily": "Source Code Pro for Powerline",
+  "terminal.integrated.fontSize": 14,
+  "terminal.integrated.rendererType": "dom",
+  "terminal.integrated.shell.osx": "/bin/zsh",
+  "typescript.format.insertSpaceBeforeFunctionParenthesis": false,
+  "window.zoomLevel": 0,
+  "workbench.colorTheme": "Solarized Dark",
+  "workbench.iconTheme": "material-icon-theme",
+  "peacock.favoriteColors": [
+    {
+      "name": "Angular Red",
+      "value": "#b52e31"
+    },
+    {
+      "name": "Auth0 Orange",
+      "value": "#eb5424"
+    },
+    {
+      "name": "Azure Blue",
+      "value": "#007fff"
+    },
+    {
+      "name": "C# Purple",
+      "value": "#68217A"
+    },
+    {
+      "name": "Gatsby Purple",
+      "value": "#639"
+    },
+    {
+      "name": "Go Cyan",
+      "value": "#5dc9e2"
+    },
+    {
+      "name": "Java Blue-Gray",
+      "value": "#557c9b"
+    },
+    {
+      "name": "JavaScript Yellow",
+      "value": "#f9e64f"
+    },
+    {
+      "name": "Mandalorian Blue",
+      "value": "#1857a4"
+    },
+    {
+      "name": "Node Green",
+      "value": "#215732"
+    },
+    {
+      "name": "React Blue",
+      "value": "#00b3e6"
+    },
+    {
+      "name": "Something Different",
+      "value": "#832561"
+    },
+    {
+      "name": "Vue Green",
+      "value": "#42b883"
+    }
+  ],
+  "css.lint.boxModel": "warning",
+  "css.lint.compatibleVendorPrefixes": "warning",
+  "css.lint.duplicateProperties": "warning",
+  "css.lint.float": "warning",
+  "css.lint.idSelector": "warning",
+  "css.lint.important": "warning",
+  "css.lint.importStatement": "warning",
+  "css.lint.universalSelector": "warning",
+  "css.lint.unknownVendorSpecificProperties": "warning",
+  "css.lint.zeroUnits": "warning",
+  "scss.lint.boxModel": "warning",
+  "scss.lint.compatibleVendorPrefixes": "warning",
+  "scss.lint.duplicateProperties": "warning",
+  "scss.lint.float": "warning",
+  "scss.lint.idSelector": "warning",
+  "scss.lint.ieHack": "warning",
+  "scss.lint.important": "warning",
+  "scss.lint.importStatement": "warning",
+  "scss.lint.universalSelector": "warning",
+  "scss.lint.unknownVendorSpecificProperties": "warning",
+  "scss.lint.zeroUnits": "warning",
+  "less.lint.compatibleVendorPrefixes": "warning",
+  "less.lint.importStatement": "warning",
+  "cSpell.showCommandsInEditorContextMenu": false,
+  "cSpell.showStatus": false,
+  "editor.fontSize": 14,
+  "prettier.singleQuote": true,
+  "workbench.activityBar.visible": true,
+  "[javascriptreact]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[sass]": {
+    "editor.defaultFormatter": "syler.sass-indented"
+  },
+  "[scss]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[typescriptreact]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "typescript.updateImportsOnFileMove.enabled": "always",
+  "[json]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[jsonc]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "html.format.wrapLineLength": 0,
+  "printcode.lineNumbers": "off",
+  "[typescript]": {
+    "editor.defaultFormatter": "vscode.typescript-language-features"
+  },
+  "[css]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[html]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
   }
+}
